# yolov5_node

./: .gitignore  .syncignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  docker.sh  run_tests.sh  sync.py  yolov5.code-workspace
.github/workflows/: docker-deploy.yml  pytest.yml
app/: main.py
app/tests/: conftest.py  example_training.json
detector/: Dockerfile  cloud.dockerfile  detector.code-workspace  docker.sh  dockerv7.sh  jetson.dockerfile  livesync.sh  main.py  pyproject.toml  requirements.txt  start.sh  yolov5.py  yolov5_.py  yolov5_detector.py
detector/.github/: copilot-instructions.md
detector/.github/workflows/: test.yml
detector/tensorrtx/: README.md
detector/tensorrtx/yolov5/: CMakeLists.txt
detector/yolov5TRT/: common.py  detect.py  detect_backend.py  experimental.py  export.py  general.py  torch_utils.py
detector_cla/: cloud.dockerfile  detector.code-workspace  docker.sh  jetson.dockerfile  main.py  yolov5_detector.py
detector_cla/app_code/yolov5/utils/: autoanchor.py  autobatch.py  general.py  metrics.py
detector_cpu/: .dockerignore  Dockerfile  cloud_cpu.dockerfile  docker.sh  main.py  pyproject.toml  start.sh  yolov5_detector.py
detector_cpu/tests/: test_yolov5_cpu.py
trainer/: Dockerfile  background_detect.py  background_detector.sh  batch_size_calculation.py  clear_epochs.patch  clear_epochs_6_1.patch  coco.py  confusion_matrices.patch  confusion_matrices_6_1.patch  detect.py  docker.sh  docker_cla.sh  docker_local.sh  generate_wts.py  hyp.yaml  hyp_cla.yaml  hyp_det.yaml  ignore_previous_fitness.patch  ignore_previous_fitness_6_1.patch  main.py  model_files.py  mypy.ini  onnx.py  pred_cla.py  pred_det.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  test_cuda_init.py  train_cla.py  train_det.py  trainer.code-workspace  training_data.py  yolor.patch  yolor.py  yolor_format.py  yolor_trainer.py  yolov5.patch  yolov5_format.py  (+1 more)
trainer/app_code/: batch_size_calculation.py  detect.py  model_files.py  yolov5_format.py  yolov5_trainer.py
trainer/app_code/tests/: conftest.py  test_yolov5.py  test_yolov5_cla.py
trainer/app_code/tests/test_data/: hyp.yaml  hyp_cla.yaml
trainer/app_code/yolov5/: __init__.py  export.py  gen_wts.py  hubconf.py  requirements.txt  train.py  val.py
trainer/app_code/yolov5/classify/: predict.py  train.py  val.py
trainer/app_code/yolov5/models/: common.py  experimental.py  yolo.py
trainer/app_code/yolov5/segment/: predict.py  train_seg.py  val.py
trainer/app_code/yolov5/utils/: augmentations.py  callbacks.py  dataloaders.py  general.py  metrics.py  plots.py  torch_utils.py
trainer/app_code/yolov5/utils/loggers/: __init__.py
trainer/app_code/yolov5/utils/loggers/comet/: hpo.py
trainer/app_code/yolov5/utils/loggers/wandb/: sweep.py
trainer/code/: yolov5_trainer.py
trainer/code/tests/: conftest.py  test_yolov5.py  test_yolov5_cla.py
trainer/code/yolov5/: requirements.txt
trainer/tests/: conftest.py  connectiontest.py  example_training.json  gdrive_downloader.py  test_coco.py  test_hyperparameter.py  test_training_data.py  test_yolor.py  test_yolor_format.py  test_yolov5.py  test_yolov5_cla.py  test_yolov5_format.py
trainer/tests/test_data/: hyp.yaml
trainer/yolov5_patches/: confusion_matrices_classification.patch
